<resources>
    <string name="facebook_app_id">610201622954883</string>
    <string name="fb_login_protocol_scheme">fb610201622954883</string>
    <string name="ad_app_id">ca-app-pub-2753248478514790~9432014842</string>
    <string name="interstitial_add">ca-app-pub-2753248478514790/4918054763</string>
    <string name="banner_ad">ca-app-pub-2753248478514790/1361953130</string>
    <string name="native_ad">ca-app-pub-2753248478514790/8059969259</string>
    <string name="giphy_api_key">noHzjGEOAjw7Q1FnLMHcbqEUyEClXTOl</string>
    <string name="request_verification">Request Verification</string>
    <string name="apply_for_funny_vo_verification">Apply for FunnyVO Verification</string>
    <string name="upper_body">A verified badge is a check that which appears next to an FunnyVO account users name to indicate that the account is authentic. Presence of notable public figure, celebrity, global brand or entity it represents.</string>
    <string name="upper_body_below">Submitting a request for verification does not \nguarantee that your account will be verified</string>
    <string name="lower_body">We require a government-issued photo ID that shows \nyour name and date of birth(e.g driver\'s license, passport or national identification card) or an official business document(tax filing, recent utility bill, article of incorporation) in order to review your request.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="short_seconds">sec</string>
    <string name="device">android</string>
    <string name="delete_function_not_available_in_demo">Delete Function not available in demo</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="post">Post</string>
    <string name="add_sound">Add Music</string>
    <string name="discover">Discover</string>
    <string name="user_local">My Local</string>
    <string name="user_profile">userprofile.jpg</string>
    <string name="tap_to_create_n_your_first_short_video">Tap + to create\n your first short video</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="privacy_and_settings">Privacy and Settings</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="try_again">Try Again</string>
    <string name="failed_trimming">Failed Trimming</string>
    <string name="error_view_trim_video">Error while previewing video</string>
    <string name="crop_video">Crop</string>
    <string name="preview">Preview</string>
    <string name="select_video">Select Video</string>
    <string name="done">Done</string>
    <string name="leave_a_comment">Leave a comment...</string>
    <string name="original_sound">Original sound - </string>
    <string name="_0_video">0 Video</string>
    <string name="followers">Followers</string>
    <string name="login_message">By signing up, you confirm that you agree to our \n Terms of Use and have read and understood \n our Privacy Policy.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="don_t_want_to_disclose_it">Leave it to me</string>
    <string name="bio">Bio</string>
    <string name="your_bio">Your Bio</string>
    <string name="full_name">Full name</string>
    <string name="choose_file">Choose File</string>
    <string name="font_bold">latobold.ttf</string>
    <string name="font_thin">latothin.ttf</string>
    <string name="font_light">latolight.ttf</string>
    <string name="font_regular">latoregular.ttf</string>
    <string name="description_hashtags">Description and HashTags</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="search_dara">Search Users, Music and Videos</string>
    <string name="audio">Audio</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="video_message">Video Message</string>
    <string name="hashtag">#HashTag</string>
    <string name="_18s">18s</string>
    <string name="start_shooting">Start Shooting</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="cant_undo">If you go back you can\'t undo this action</string>
    <string name="no">No</string>
    <string name="yesValue">Yes</string>
    <string name="error_saving_video">Error saving the video</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="to">To</string>
    <string name="request_sent">Request Sent Successfully</string>
    <string name="yes">yes</string>
    <string name="server_error_upload_video">Their is some server side issue.\n Please Try again Later</string>
    <string name="video_uploaded_successfully">Your Video is uploaded Successfully</string>
    <string name="uploading_video">Uploading your FunnyVO</string>
    <string name="please_wait_upload_video">Please wait! Video is uploading....</string>
    <string name="image_update_success">Image Update Successfully</string>
    <string name="comment_not_posted">Some issue in posting your comment, We\'ll fix it shortly</string>
    <string name="video_not_deleted">Video will be deleted shortly</string>
    <string name="fetch_user_not_happening">Not able to fetch the user, We are fixing your issue</string>
    <string name="please_login">Please Login</string>
    <string name="continue_using_app">Video will be uploaded, You continue enjoy using the app </string>
    <string name="file_saved_in_draft">File saved in Draft</string>
    <string name="save_failed_into_draft">Sorry, save to draft failed.</string>
    <string name="unable_to_fetch_user_videos">Unable to fetch your videos at the moment</string>
    <string name="no_network">No Network Available</string>
    <string name="mind_checking_network">Would you mind checking your network ?</string>
    <string name="ok">OK</string>
    <string name="you_must_login_first">You have to login First</string>
    <string name="social_networking_handler">Social Networking Handler</string>
    <string name="intagram">Add you Instagram handle</string>
    <string name="twitter">Add your Twitter handle</string>
    <string name="youtube">Add your Youtube channel name</string>
    <string name="video_visible_to">Video Visible To</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="video_not_available">Video not available at the moment</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="switch_flash">Switch Flash</string>
    <string name="recording_timer">Recording Timer</string>
    <string name="recording_speed">Recording Speed</string>
    <string name="filters">Filters</string>
    <string name="_0_5x">0.5x</string>
    <string name="_0_75x">0.7x</string>
    <string name="_1x">1x</string>
    <string name="_1_5x">1.5x</string>
    <string name="_2x">2x</string>
    <string name="save_video">Save Video</string>
    <string name="delete_video">Delete Video</string>
    <string name="templates">Templates</string>
    <string name="image_library">Image Library</string>
    <string name="limit_reached">Limit Reached</string>
    <string name="select">Select</string>
    <string name="single_pic_msg">Select 1 picture</string>
    <string name="select_2_photo">Select 2 pictures</string>
    <string name="select_4_photo">Select 4 pictures</string>
    <string name="select_6_photo">Select 6 pictures</string>
    <string name="crop_the_video_message">Please crop the video. Allowed is 30s</string>
    <string name="crop">Crop</string>
    <string name="fast_motion">Fast motion</string>
    <string name="slow_motion">Slow motion</string>
    <string name="free_draw">Free draw</string>
    <string name="add_text">Add text</string>
    <string name="opacity">Opacity</string>
    <string name="brush">Brush</string>
    <string name="undo">Undo</string>
    <string name="stickers">Stickers</string>
    <string name="gallery">Gallery</string>
    <string name="collage">Collage</string>
    <string name="_30s">30s</string>
    <string name="_15s">15s</string>
    <string name="_60s">60s</string>
    <string name="delete">delete</string>
</resources>