<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:paddingTop="24dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/white"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/d_bottom_gray_line">

                <ImageButton
                    android:id="@+id/Goback"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_15"
                    android:background="@android:color/transparent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_back"
                    android:tint="@color/palette_cheddar" />

                <com.funnyvo.android.customview.FunnyVOTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/profile"
                    android:textColor="@color/palette_cheddar"
                    android:textSize="@dimen/text_size_18" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:gravity="center|end"
                    android:text="@string/save"
                    android:textColor="@color/palette_cheddar_dark"
                    android:textSize="@dimen/text_size_15"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">


                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="@dimen/margin_10">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_image_placeholder" />

                    <ImageButton
                        android:id="@+id/upload_pic_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:background="@color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_camera_icon" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:minHeight="50dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_profile_gray" />

                    <com.funnyvo.android.customview.FunnyVOEditTextView
                        android:id="@+id/username_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="25dp"
                        android:backgroundTint="@color/transparent"
                        android:hint="Username"
                        android:textColor="@color/black"
                        android:textColorHint="@color/graycolor"
                        android:textSize="@dimen/text_size_15" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="49dp"
                        android:background="@color/graycolor" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_weight="1"
                        android:minHeight="50dp">

                        <ImageView
                            android:id="@+id/profile_icon"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_profile_gray" />

                        <com.funnyvo.android.customview.FunnyVOEditTextView
                            android:id="@+id/firstname_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:layout_toRightOf="@+id/profile_icon"
                            android:backgroundTint="@color/transparent"
                            android:hint="First name"
                            android:inputType="textCapSentences"
                            android:textColor="@color/black"
                            android:textColorHint="@color/graycolor"
                            android:textSize="@dimen/text_size_15" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="49dp"
                            android:layout_toRightOf="@+id/profile_icon"
                            android:background="@color/graycolor" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_weight="1"
                        android:minHeight="50dp">

                        <ImageView
                            android:id="@+id/profile_icon_lastname"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_profile_gray" />

                        <com.funnyvo.android.customview.FunnyVOEditTextView
                            android:id="@+id/lastname_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:layout_toRightOf="@+id/profile_icon_lastname"
                            android:backgroundTint="@color/transparent"
                            android:hint="Last name"
                            android:inputType="textCapSentences"
                            android:textColor="@color/black"
                            android:textColorHint="@color/graycolor"
                            android:textSize="@dimen/text_size_15" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="49dp"
                            android:layout_toRightOf="@+id/profile_icon_lastname"
                            android:background="@color/graycolor" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <com.funnyvo.android.customview.FunnyVOTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightgraycolor"
                        android:elevation="0.5dp"
                        android:padding="@dimen/margin_5"
                        android:text="@string/gender"
                        android:textColor="@color/palette_cheddar_dark"
                        android:textSize="@dimen/text_size_15"
                        android:textStyle="italic" />


                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/margin_10">

                        <RadioButton
                            android:id="@+id/male_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textColor="@color/palette_cheddar"
                            android:textSize="@dimen/text_size_15"
                            android:theme="@style/RadioButton" />

                        <RadioButton
                            android:id="@+id/female_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textColor="@color/palette_cheddar"
                            android:textSize="@dimen/text_size_15"
                            android:theme="@style/RadioButton" />

                        <RadioButton
                            android:id="@+id/btnNone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_want_to_disclose_it"
                            android:textColor="@color/palette_cheddar"
                            android:textSize="@dimen/text_size_15"
                            android:theme="@style/RadioButton" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <com.funnyvo.android.customview.FunnyVOTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightgraycolor"
                        android:elevation="0.5dp"
                        android:padding="@dimen/margin_5"
                        android:text="@string/social_networking_handler"
                        android:textColor="@color/palette_cheddar_dark"
                        android:textSize="@dimen/text_size_15"
                        android:textStyle="italic" />

                    <com.funnyvo.android.customview.FunnyVOEditTextView
                        android:id="@+id/edtTextInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/intagram"
                        android:inputType="text"
                        android:textColor="@color/palette_cheddar"
                        android:textSize="@dimen/text_size_13" />

                    <com.funnyvo.android.customview.FunnyVOEditTextView
                        android:id="@+id/edtTextTwitter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/twitter"
                        android:inputType="text"
                        android:textColor="@color/palette_cheddar"
                        android:textSize="@dimen/text_size_13" />

                    <com.funnyvo.android.customview.FunnyVOEditTextView
                        android:id="@+id/edtTextYoutube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/youtube"
                        android:inputType="text"
                        android:textColor="@color/palette_cheddar"
                        android:textSize="@dimen/text_size_13" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <com.funnyvo.android.customview.FunnyVOTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lightgraycolor"
                        android:elevation="0.5dp"
                        android:padding="@dimen/margin_5"
                        android:text="@string/bio"
                        android:textColor="@color/palette_cheddar_dark"
                        android:textSize="16dp"
                        android:textStyle="italic" />

                    <com.funnyvo.android.customview.FunnyVOEditTextView
                        android:id="@+id/user_bio_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:hint="@string/your_bio"
                        android:imeOptions="flagNavigateNext"
                        android:inputType="textCapSentences"
                        android:minLines="2"
                        android:nextFocusForward="@+id/jobtitle_edit"
                        android:paddingLeft="@dimen/margin_15"
                        android:paddingTop="@dimen/margin_5"
                        android:textColor="@color/palette_cheddar"
                        android:textColorHint="@color/palette_cheddar"
                        android:textSize="@dimen/text_size_15" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</FrameLayout>
